--- a/package.json
+++ b/package.json
@@ -5,8 +5,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "displayName": "bizphoto",
-  "dependencies": {},
+  "dependencies": {
+    "cordova-android": "^6.3.0",
+    "cordova-plugin-camera": "^4.0.1",
+    "cordova-plugin-geolocation": "^4.0.1"
+  },
   "cordova": {
-    "plugins": {}
+    "plugins": {
+      "cordova-plugin-camera": {},
+      "cordova-plugin-geolocation": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
